--- a/vnet1.yaml
+++ b/vnet1.yaml
@@ -1,10 +1,12 @@
 apiVersion: network.azure.upbound.io/v1beta1
 kind: VirtualNetwork
 metadata:
-  name: vnet-ramin-crossplane2
+  name: vnet-scope1
 spec:
   forProvider:
     addressSpace:
       - 10.0.0.0/16
     location: "West Europe"
-    resourceGroupName: ramin-rg-2
+    resourceGroupName: rg-scope-scope1
+  providerConfigRef:
+    name: provider-config-scope1
